--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "dependencies": {
     "core-js": "^3.8.3",
     "vue": "^2.6.14",
+    "vue-aos": "^3.1.0",
     "vue-carousel": "^0.18.0",
     "vue-router": "^3.5.1",
+    "vue-scrollto": "^2.20.0",
     "vuetify": "^2.6.0",
     "vuex": "^3.6.2"
   },
