--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@fawmi/vue-google-maps": "^0.9.79",
     "aos": "^2.3.4",
     "core-js": "^3.8.3",
     "vue": "^2.6.14",
@@ -15,6 +16,7 @@
     "vue-carousel": "^0.18.0",
     "vue-router": "^3.5.1",
     "vue-scrollto": "^2.20.0",
+    "vue2-google-maps": "^0.10.7",
     "vuetify": "^2.6.0",
     "vuex": "^3.6.2"
   },
