--- a/package.json
+++ b/package.json
@@ -8,14 +8,17 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@emailjs/browser": "^3.9.1",
     "@fawmi/vue-google-maps": "^0.9.79",
     "aos": "^2.3.4",
     "core-js": "^3.8.3",
+    "v-mask": "^2.3.0",
     "vue": "^2.6.14",
     "vue-aos": "^3.1.0",
     "vue-carousel": "^0.18.0",
     "vue-router": "^3.5.1",
     "vue-scrollto": "^2.20.0",
+    "vue-the-mask": "^0.11.1",
     "vue2-google-maps": "^0.10.7",
     "vuetify": "^2.6.0",
     "vuex": "^3.6.2"
