--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "vue": "^2.6.14",
     "vue-aos": "^3.1.0",
     "vue-carousel": "^0.18.0",
+    "vue-meta": "^2.4.0",
     "vue-router": "^3.5.1",
     "vue-scrollto": "^2.20.0",
     "vue-the-mask": "^0.11.1",
