--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
   "dependencies": {
     "@emailjs/browser": "^3.9.1",
     "@fawmi/vue-google-maps": "^0.9.79",
+    "@vue/composition-api": "^1.7.1",
+    "@vuelidate/core": "^2.0.0",
+    "@vuelidate/validators": "^2.0.0",
     "aos": "^2.3.4",
     "core-js": "^3.8.3",
     "v-mask": "^2.3.0",
