--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "vue-scrollto": "^2.20.0",
     "vue-the-mask": "^0.11.1",
     "vue2-google-maps": "^0.10.7",
+    "vuelidate": "^0.7.7",
     "vuetify": "^2.6.0",
     "vuex": "^3.6.2"
   },
