--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "sitemap": "vue-cli-service sitemap"
   },
   "dependencies": {
     "@emailjs/browser": "^3.9.1",
@@ -15,8 +16,10 @@
     "@vuelidate/validators": "^2.0.0",
     "aos": "^2.3.4",
     "core-js": "^3.8.3",
+    "esm": "^3.2.25",
+    "firebase": "^8.10.1",
     "v-mask": "^2.3.0",
-    "vue": "^2.6.14",
+    "vue": "^2.7.14",
     "vue-aos": "^3.1.0",
     "vue-carousel": "^0.18.0",
     "vue-meta": "^2.4.0",
@@ -24,6 +27,7 @@
     "vue-scrollto": "^2.20.0",
     "vue-the-mask": "^0.11.1",
     "vue2-google-maps": "^0.10.7",
+    "vuefire": "^3.0.0",
     "vuelidate": "^0.7.7",
     "vuetify": "^2.6.0",
     "vuex": "^3.6.2"
@@ -40,6 +44,7 @@
     "eslint-plugin-vue": "^8.0.3",
     "sass": "^1.32.7",
     "sass-loader": "^12.0.0",
+    "vue-cli-plugin-sitemap": "~2.3.0",
     "vue-cli-plugin-vuetify": "~2.5.8",
     "vue-template-compiler": "^2.6.14",
     "vuetify-loader": "^1.7.0"
