--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "vue": "^2.6.14",
     "vue-aos": "^3.1.0",
     "vue-carousel": "^0.18.0",
+    "vue-good-table": "^2.21.11",
     "vue-meta": "^2.4.0",
+    "vue-property-decorator": "^8.5.1",
     "vue-router": "^3.5.1",
     "vue-scrollto": "^2.20.0",
     "vue-the-mask": "^0.11.1",
