--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "aos": "^2.3.4",
     "core-js": "^3.8.3",
     "firebase": "^8.10.0",
+    "hooper": "^0.3.4",
     "v-mask": "^2.3.0",
     "vue": "^2.6.14",
     "vue-aos": "^3.1.0",
@@ -25,6 +26,7 @@
     "vue-property-decorator": "^8.5.1",
     "vue-router": "^3.5.1",
     "vue-scrollto": "^2.20.0",
+    "vue-slick-carousel": "^1.0.6",
     "vue-the-mask": "^0.11.1",
     "vue2-google-maps": "^0.10.7",
     "vuefire": "^2.2.5",
